Add persistent volume for workspaces

--- a/railway.toml
+++ b/railway.toml
@@ -5,3 +5,7 @@ builder = "dockerfile"
 healthcheckPath = "/health"
 healthcheckTimeout = 30
 restartPolicyType = "always"
+
+[[mounts]]
+source = "workspaces"
+destination = "/app/workspaces"
